# fraud-env-api

./: App.py  Dockerfile  README  app.py  environement.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
