[project]
name = "fraud-env"
version = "1.0.0"
description = "Financial Fraud Defender RL Environment"
requires-python = ">=3.10"

dependencies = [
    "gymnasium==0.29.1",
    "numpy",
    "fastapi",
    "uvicorn>=0.14.0",
    "pydantic>=2.0",
    "openai",
    "pandas",
    "python-multipart",
    "httpx",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:main"

[tool.setuptools]
py-modules = ["app", "environment", "models", "inference"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
